Release info
============

You can see the complete list of recent changes, bugfixes and new features
in the http://repo.or.cz/w/elinks.git[gitweb interface]. See the ChangeLog
file for details.

ELinks 0.12pre4.GIT now:
------------------------

To be released as 0.12pre5, 0.12rc1, or even 0.12.0.  This branch also
includes the changes listed under ``ELinks 0.11.6.GIT now'' below.

* bug 1080: Support ``--dump-color-mode'' with ``--dump-charset UTF-8''.
* minor bug 1017: To work around HTTP server bugs, disable
  protocol.http.compression by default, until ELinks can report
  decompression errors or automatically retry the connection.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 1081: To fix crashes caused by different definitions of
  regfree() in TRE and in the system libc, link with TRE before any
  other libraries.  ELinks 0.12pre4 was the first release that had
  this bug.

ELinks 0.12pre4:
----------------

Released on 2009-05-31.  This release also included the changes listed
under ``ELinks 0.11.6'' below.

Incompatibilities:

* Debian build bug 529821: Use ``pkg-config gnutls'' instead of
  ``libgnutls-config'', which is not included in GNUTLS 2.7.x.
  You can no longer specify the location of GNUTLS using
  ``configure --with-gnutls=DIR''.

Other changes:

* critical bug 1077: Fix crash opening a ``javascript:'' link in a new
  tab.
* Debian bug 528661: If using GNUTLS 2.1.7 or later, disable various
  TLS extensions (including CERT and SERVERNAME) to help handshaking
  with the SSLv3-only bugzilla.novell.com.
* Debian build bug 526349: Include asciidoc.py from AsciiDoc 7.1.2,
  to remove all dependencies on the installed version.
* build enhancement: Recognize ``configure --without-tre''.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 1071: Fix crash in get_dom_node_child.  ELinks 0.12pre1
  was the first release that had this bug.