@@ -11,6 +11,8 @@ ELinks 0.12pre4.GIT now:
 To be released as 0.12pre5, 0.12rc1, or even 0.12.0.  This branch also
 includes the changes listed under ``ELinks 0.11.6.GIT now'' below.
 
+* Debian bug 534835: Check the return values of some SpiderMonkey
+  functions, to avoid crashes if out of memory.
 * bug 1080: Support ``--dump-color-mode'' with ``--dump-charset UTF-8''.
 * minor bug 1017: To work around HTTP server bugs, disable
   protocol.http.compression by default, until ELinks can report
